tests/compile_fail/missing_internal.out
In file included from tests/compile_fail/missing_internal.cpp:15:
src/secureenumconverter.inc:24:6: error: #error "SEC_INTERNAL not defined"
     #error "SEC_INTERNAL not defined"
      ^~~~~
compilation terminated due to -Wfatal-errors.
